# ngspice_ui

./: .gitignore  LICENSE  README.md  ngspice_ui_dist.spec  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  rc_lowpass.cir
examples/complex/: astable_multivibrator.cir  ce_amplifier.cir  sallen_key_lpf.cir
examples/simple/: halfwave_rectifier.cir  rc_step.cir  voltage_divider.cir
ngspice_ui/: __init__.py  __main__.py
ngspice_ui/engine/: __init__.py  bindings.py  callbacks.py  session.py
ngspice_ui/gui/: app.py  main_window.py  main_window_ui.py
ngspice_ui/gui/controllers/: sim_controller.py
ngspice_ui/gui/widgets/: analysis_panel.py  console.py  cosim_widget.py  eagle_view.py  help_dialog.py  linter.py  measurements_widget.py  model_browser_widget.py  monte_carlo_widget.py  netlist_editor.py  netlist_highlighter.py  notes_widget.py  param_sweep_widget.py  plot_canvas.py  schematic_view.py  script_widget.py  snippet_widget.py
ngspice_ui/models/: analyses.py  expr.py  monte_carlo.py  project.py  result.py  waveform.py
ngspice_ui/schematic/: __init__.py  eagle_import.py  kicad_import.py
ngspice_ui/schematic/kicad/: __init__.py  sexpr.py
tests/: test_analysis_panel.py  test_bindings.py  test_cosim_widget.py  test_eagle_import.py  test_kicad_import.py  test_kicad_sexpr.py  test_linter.py  test_main_window.py  test_models.py  test_netlist_editor.py  test_param_sweep_widget.py  test_plot_canvas.py  test_project.py  test_result.py  test_session.py  test_session_helpers.py  test_sim_controller.py
tests/fixtures/: dual_unit.kicad_sch  rc_divider.kicad_sch
