[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngspice-ui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
fast-plot = ["pyqtgraph>=0.13"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
ngspice-ui = "ngspice_ui.gui.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
